@@ -2327,24 +2327,6 @@ argument_list|)
 expr_stmt|;
 break|break;
 case|case
-name|CLUSTERSTATUS
-case|:
-comment|//TODO . deprecated. OCP does not need to do it .remove in a later release
-operator|new
-name|ClusterStatus
-argument_list|(
-name|zkStateReader
-argument_list|,
-name|message
-argument_list|)
-operator|.
-name|getClusterStatus
-argument_list|(
-name|results
-argument_list|)
-expr_stmt|;
-break|break;
-case|case
 name|ADDREPLICAPROP
 case|:
 name|processReplicaAddPropertyCommand
@@ -18173,24 +18155,8 @@ name|ZkNodeProps
 name|message
 parameter_list|)
 block|{
-comment|//TODO deprecated remove this check .
 if|if
 condition|(
-operator|!
-name|CLUSTERSTATUS
-operator|.
-name|isEqual
-argument_list|(
-name|message
-operator|.
-name|getStr
-argument_list|(
-name|Overseer
-operator|.
-name|QUEUE_OPERATION
-argument_list|)
-argument_list|)
-operator|&&
 name|collectionName
 operator|!=
 literal|null
@@ -18230,14 +18196,6 @@ parameter_list|)
 block|{
 if|if
 condition|(
-operator|!
-name|CLUSTERSTATUS
-operator|.
-name|isEqual
-argument_list|(
-name|operation
-argument_list|)
-operator|&&
 name|collectionName
 operator|!=
 literal|null
@@ -18272,29 +18230,6 @@ name|ZkNodeProps
 name|message
 parameter_list|)
 block|{
-comment|// CLUSTERSTATUS is always mutually exclusive
-comment|//TODO deprecated remove this check .
-if|if
-condition|(
-name|CLUSTERSTATUS
-operator|.
-name|isEqual
-argument_list|(
-name|message
-operator|.
-name|getStr
-argument_list|(
-name|Overseer
-operator|.
-name|QUEUE_OPERATION
-argument_list|)
-argument_list|)
-condition|)
-return|return
-name|ExclusiveMarking
-operator|.
-name|EXCLUSIVE
-return|;
 synchronized|synchronized
 init|(
 name|collectionWip
